# artifetch

./: Cargo.toml  README.md  artifacts.json
src/: artifact.rs  cli.rs  config.rs  features.rs  main.rs  utils.rs
src/features/: add.rs  fetch.rs  remove.rs  show.rs
